# wg_task1

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  config.py  entrypoint.sh  pyproject.toml  pytest.ini
clients/: http_client.py  wiki_http_client.py
clients/wiki/: wiki_http_client.py
models/: popular_website_model.py
tests/wiki/: conftest.py  test_websites_table.py
utils/: logger.py  table_parser.py
